--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
 
   frontend:
     build:
-      context: ./frontend
+      context: ./intranet-frontend
       dockerfile: Dockerfile
     ports:
       - "3000:3000" 
@@ -28,7 +28,7 @@ services:
 
   backend:
     build:
-      context: ./backend
+      context: ./intranet-backend
       dockerfile: Dockerfile
     ports:
       - "80:80" 
